# memHierarchy

./: CMakeLists.txt  Makefile  README.md  bus.cc  bus.h  cacheArray.cc  cacheArray.h  cacheController.cc  cacheController.h  cacheEventProcessing.cc  cacheFactory.cc  cacheListener.h  clang-warnings  coherentMemoryController.cc  coherentMemoryController.h  compile-warnings  directoryController.cc  directoryController.h  dmaEngine.cc  dmaEngine.h  fix-headers.sh  hash.cc  hash.h  lineTypes.h  memEvent.h  memEventBase.h  memHierarchyInterface.cc  memHierarchyInterface.h  memHierarchyScratchInterface.cc  memHierarchyScratchInterface.h  memLink.cc  memLink.h  memLinkBase.h  memNIC.cc  memNIC.h  memNICBase.h  memNICFour.cc  memNICFour.h  memNetBridge.cc  memNetBridge.h  (+18 more)
Sieve/: alloctrackev.h  broadcastShim.cc  broadcastShim.h  memmgr_sieve.cc  memmgr_sieve.h  sieveController.cc  sieveController.h  sieveFactory.cc
Sieve/tests/: ompsievetest.c  sieve-test.py  trace-text.py
coherencemgr/: Incoherent.cc  Incoherent.h  IncoherentController.cc  IncoherentController.h  Incoherent_L1.cc  Incoherent_L1.h  L1CoherenceController.cc  L1CoherenceController.h  L1IncoherentController.cc  L1IncoherentController.h  MESICoherenceController.cc  MESICoherenceController.h  MESIInternalDirectory.cc  MESIInternalDirectory.h  MESI_Directory.cc  MESI_Directory.h  MESI_Inclusive.cc  MESI_Inclusive.h  MESI_L1.cc  MESI_L1.h  MESI_Private_Noninclusive.cc  MESI_Private_Noninclusive.h  MESI_Shared_Noninclusive.cc  MESI_Shared_Noninclusive.h  coherenceController.cc  coherenceController.h
customcmd/: amoCustomCmdHandler.cc  amoCustomCmdHandler.h  customCmdEvent.h  customCmdMemory.h  customOpCodeCmd.h
membackend/: HBMdramSimBackend.cc  HBMdramSimBackend.h  HBMpagedMultiBackend.cc  HBMpagedMultiBackend.h  MessierBackend.cc  MessierBackend.h  backing.h  cramSimBackend.cc  cramSimBackend.h  delayBuffer.cc  delayBuffer.h  dramSimBackend.cc  dramSimBackend.h  extMemBackendConvertor.cc  extMemBackendConvertor.h  flagMemBackendConvertor.cc  flagMemBackendConvertor.h  flashSimBackend.cc  flashSimBackend.h  goblinHMCBackend.cc  goblinHMCBackend.h  hybridSimBackend.cc  hybridSimBackend.h  memBackend.h  memBackendConvertor.cc  memBackendConvertor.h  pagedMultiBackend.cc  pagedMultiBackend.h  ramulatorBackend.cc  ramulatorBackend.h  requestReorderByRow.cc  requestReorderByRow.h  requestReorderSimple.cc  requestReorderSimple.h  scratchBackendConvertor.cc  scratchBackendConvertor.h  simpleDRAMBackend.cc  simpleDRAMBackend.h  simpleMemBackend.cc  simpleMemBackend.h  (+11 more)
testcpu/: scratchCPU.cc  scratchCPU.h  streamCPU.cc  streamCPU.h  trivialCPU.cc  trivialCPU.h
tests/: checkReqs.py  checkVals.py  example.py  genRefs.sh  genRefsOther.sh  goblinCustomCmd-2.py  hbm-2-trace.py  hbm-2.py  runTests.sh  runall.sh  sdl-1.py  sdl-2.py  sdl-3.py  sdl2-1.py  sdl3-1.py  sdl3-2.py  sdl3-3.py  sdl4-1.py  sdl4-2-ramulator.py  sdl4-2.py  sdl5-1-ramulator.py  sdl5-1.py  sdl8-1.py  sdl8-3.py  sdl8-4.py  sdl9-1.py  sdl9-2.py  sweep.py  testBackendChaining.py  testBackendCramSim.py  testBackendDelayBuffer.py  testBackendGoblinHMC.py  testBackendHBMDramsim.py  testBackendHBMPagedMulti.py  testBackendPagedMulti.py  testBackendReorderRow.py  testBackendReorderSimple.py  testBackendSimpleDRAM-1.py  testBackendSimpleDRAM-2.py  testBackendTimingDRAM-1.py  (+27 more)
tests/others/: sdl10-1.xml  sdl10-2.xml  sdl7-1.xml  sdl7-2.xml
